--- a/css/footer.css
+++ b/css/footer.css
@@ -1,16 +1,14 @@
 .footer {
   background: #000000;
+  max-width: 400px;
+  margin-top: 0;
 }
 
 .footer__container {
-  max-width: 1200px;
-  padding: 120px 60px;
-  margin: 0 auto;
   display: flex;
-  gap: 40px;
   align-items: center;
-  justify-content: space-between;
   flex-direction: column;
+  padding: 3rem 0 1rem;
 }
 
 .footer__texto {
@@ -21,72 +19,25 @@
 
 .footer__container h1 {
   font-weight: bold;
-  font-size: 2.25rem;
-  line-height: 1,1;
+  font-size: 1.55rem;
   color: #ffffff;
+  margin: 0 !important;
 }
 
 .footer__contato {
   display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
+  gap: 1rem;
   justify-content: center;
 }
 
-.footer__contato li {
-  font-weight: bold;
-  font-size: 2.25rem;
-  line-height: 1.1;
-  color: #ffffff;
-  margin-bottom: 30px;
-}
-
-.footer__contato li a {
-  color: #ffffff;
-}
-
 .footer__contato li a img {
-  margin: 40px 10px 120px;
-  width: 75px;
-  transition: all .5s;
-  border: 5px solid transparent;
-}
-
-.footer__contato li a img:hover {
-  border: 5px solid #67dd0a;
-  border-radius: 50%;
+  margin: 4rem  0 1rem;
+  width: 30px;
 }
 
 .footer__copy {
-  font-size: 1.125rem;
+  font-size: .725rem;
   color: #8f8f8f;
 }
 
-@media (max-width: 800px) {
-  .footer__container {
-    gap: 0px;
-  }
-  .footer__contato {
-    gap: 2px;
-  }
-  .footer__contato li {
-    font-size: 1.5rem;
-  }
-  .footer__contato li a img {
-    margin: 50px 0px;
-    width: 50px;
-  }
-  .footer__copy {
-    font-size: 0.875rem;
-    margin-top: 80px;
 
-  }
-}
-@media (max-width: 500px) {
-  .footer__container {
-    padding: 120px 0px 20px 0px;
-  }
-  .footer__container h1 {
-    font-size: 1.25rem;
-  }
-}
