--- a/css/header.css
+++ b/css/header.css
@@ -1,48 +1,14 @@
 .header {
-  max-width: 1200px;
-  padding: 40px 20px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.header__menu {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-}
-.header__menu a {
-  font-size: 1.125rem;
-  line-height: 1.3;
-  padding: 10px 20px;
-  text-decoration: none;
-  color: #141414;
-  display: inline-block;
-  position: relative;
-}
-
-nav ul a::after {
-  content: "";
-  background: linear-gradient(#b6f829, #67dd0a);
-  height: 3px;
-  width: 0%;
-  display: block;
-  transition: 0.3s;
-}
-
-nav ul a:hover::after {
   width: 100%;
+  max-width: 400px;
+  position: fixed;
+  z-index: 9999;
 }
 
-@media (max-width: 800px) {
-  .header {
-    flex-direction: column;
-    gap: 40px;
-    padding: 20px;
-  }
-  .header a {
-    background: #f5f5f5;
-    border-radius: 4px;
-  }
+.container-fluid > button{
+  color: #141414;
+  background: #FFEC9E;
+  padding: .4rem;
+  border: 3px solid #141414;
+  font-weight: 500;
 }
