--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 @import "./global.css";
 @import "./header.css";
 @import "./introducao.css";
-@import "./experiencia.css";
-@import "./formacao.css";
+@import "./cardapio.css";
 @import "./footer.css";
