--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,2 @@
 @import "./global.css";
-@import "./header.css";
-@import "./introducao.css";
-@import "./cardapio.css";
-@import "./footer.css";
+@import "./home.css";
