--- a/css/home.css
+++ b/css/home.css
@@ -141,3 +141,26 @@ form {
   margin-top: 1rem;
   width: 40px;
 }
+
+/*  Modal ------------- */
+
+.modal-content img{
+  border-left: 3px solid rgba(68, 62, 40, 1);
+  border-bottom:  2px solid rgb(180, 165, 103);
+  border-right: 2px solid #f3c67f;
+}
+
+.modal-header {
+  border-bottom: 0 !important;
+  background: rgb(68, 62, 40);
+  background: linear-gradient(
+    24deg,
+    rgba(68, 62, 40, 1) 0%,
+    rgb(180, 165, 103) 61%,
+    #f3c67f 100%
+  );
+}
+
+.modal-header button {
+  font-size: 1.2rem;
+}
